--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "blockUI": "malsup/blockui",
     "requirejs": "^2.3.3",
     "datatables.net-dt": "^3.2.2",
-    "rateyo": "^2.3.2"
+    "rateyo": "^2.3.2",
+    "cropper": "^3.1.4"
   },
   "resolutions": {
     "jquery": "^3.2.1"
